Fixed: wflow-consoleweb - Datalist - Missing horizontal scrollbar when table width too large. @8.0-SNAPSHOT Fixed: wflow-consoleweb - Datalist - Column text alignment does not work. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/datalist8.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalist8.css
@@ -1,6 +1,9 @@
 .dataList {
     display: none;
 }
+.dataList .table-wrapper{
+    overflow-x: auto;
+}
 .dataList table {
     min-width:100%;
     border-bottom: 2px solid var(--theme-color5, #dee2e6);
@@ -344,6 +347,24 @@ body.is-dragging .card-layout.card-layout-active table td[data-cbuilder-dragelem
     display: block;
     clear: both;
     float: none;
+}
+.rtl .dataList th.dataListAlignRight,
+.dataList th.dataListAlignLeft,
+.rtl .dataList td.dataListAlignRight,
+.dataList td.dataListAlignLeft {
+    text-align: left;
+}
+.rtl .dataList th.dataListAlignLeft,
+.dataList th.dataListAlignRight,
+.rtl .dataList td.dataListAlignLeft,
+.dataList td.dataListAlignRight {
+    text-align: right;
+}
+.rtl .dataList th.dataListAlignCenter,
+.dataList th.dataListAlignCenter,
+.rtl .dataList td.dataListAlignCenter,
+.dataList td.dataListAlignCenter {
+    text-align: center;
 }
 @media (max-width: 991px) {
     .card-layout.card-layout-active tr{
